# popl26-tutorial

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
SOLUTION/: expand.py  jit.sh  solution.py  test.sh  utils.py
dat/: words.txt
scaffold/: debug_jit.sh  expand.py  solution.py  test.sh  utils.py
sh/: danger.sh  generate_src.sh  mk_scaffold.sh  redact.sh  spell.sh  vps-audit.sh
src/: analysis.py  ast_helper.py  debug_jit.sh  expand.py  feature_counter.py  jit.sh  jit_step5.sh  parsing.py  preprocess.py  pure.py  solution.py  test.sh  utils.py
