[project]
name = "popl26shell"
version = "0.1.0"
description = "A tutorial for analyzing shell scripts at POPL'26!"
readme = "README.md"
authors = [
    { name = "Michael Greenberg", email = "michael@greenberg.science" }
    { name = "Konstantinos Kallas", email = "kkallas@ucla.edu" },
    { name = "Nikos Vasilakis", email = "nikos@vasilak.is" },
    { name = "Evangelos Lamprou", email = "vagos@lamprou.xyz" },
]
requires-python = ">=3.10"
dependencies = [
    "libdash @ git+https://github.com/binpash/libdash",
    "pash-annotations>=0.2.4",
    "shasta>=0.2.2",
]
